Incluído buttons Bunifu

--- a/PIM3.Desktop/PIM3.Desktop.csproj
+++ b/PIM3.Desktop/PIM3.Desktop.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bunifu_UI_v1.5.3">
-      <HintPath>..\..\..\..\4º semestre\PIM\DLL Bunifu\Bunifu_UI_v1.5.3.dll</HintPath>
+    <Reference Include="Bunifu_UI_v1.52">
+      <HintPath>..\..\..\..\Documents\ADS\4º semestre\PIM\DLL Bunifu\Bunifu_UI_v1.52.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="MySql.Data, Version=8.0.15.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
@@ -285,6 +285,12 @@
     <Compile Include="Teste.Designer.cs">
       <DependentUpon>Teste.cs</DependentUpon>
     </Compile>
+    <Compile Include="testeMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="testeMessageBox.Designer.cs">
+      <DependentUpon>testeMessageBox.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="FrmCadCliente.resx">
       <DependentUpon>FrmCadCliente.cs</DependentUpon>
     </EmbeddedResource>
@@ -407,6 +413,9 @@
     </Compile>
     <EmbeddedResource Include="Teste.resx">
       <DependentUpon>Teste.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="testeMessageBox.resx">
+      <DependentUpon>testeMessageBox.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
