--- a/PIM3.Desktop/PIM3.Desktop.csproj
+++ b/PIM3.Desktop/PIM3.Desktop.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="Bunifu_UI_v1.52">
       <HintPath>..\..\..\..\Documents\ADS\4º semestre\PIM\DLL Bunifu\Bunifu_UI_v1.52.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="MySql.Data, Version=8.0.15.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
