--- a/PIM3.Desktop/PIM3.Desktop.csproj
+++ b/PIM3.Desktop/PIM3.Desktop.csproj
@@ -37,6 +37,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Debug\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
+    <Reference Include="JTextBox2">
+      <HintPath>DLL Bunifu\JTextBox2.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="MySql.Data, Version=8.0.15.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -421,6 +424,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Teste.resx">
       <DependentUpon>Teste.cs</DependentUpon>
@@ -446,6 +450,13 @@
       <Project>{63DFC7D3-0F22-49A1-B639-58699AD4B973}</Project>
       <Name>DLLComando</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DLLGenericaConexao\DLLGenericaConexao.csproj">
+      <Project>{9a9ccaab-2a16-4625-b963-5620151a06fb}</Project>
+      <Name>DLLGenericaConexao</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imagens\Imagem fundo Login.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
